# tptpy

./: README.md  pyproject.toml  requirements.txt
tptpy/: __main__.py
ttp_templates/: _over_matched.json  alcatel_aos_show_vlan.json  alcatel_aos_show_vlan.ttp  alcatel_sros_oam_mac-ping.json  alcatel_sros_oam_mac-ping.ttp  alcatel_sros_show_router_bgp_summary_family.json  alcatel_sros_show_router_bgp_summary_family.ttp  alcatel_sros_show_router_interface.json  alcatel_sros_show_router_interface.ttp  alcatel_sros_show_router_isis_adjacency.json  alcatel_sros_show_router_isis_adjacency.ttp  alcatel_sros_show_router_isis_interface.json  alcatel_sros_show_router_isis_interface.ttp  alcatel_sros_show_router_mpls_interface.json  alcatel_sros_show_router_mpls_interface.ttp  alcatel_sros_show_router_mpls_lsp.json  alcatel_sros_show_router_mpls_lsp.ttp  alcatel_sros_show_router_ospf_interface.json  alcatel_sros_show_router_ospf_interface.ttp  alcatel_sros_show_service_id_base.json  alcatel_sros_show_service_id_base.ttp  alcatel_sros_show_service_sap-using.json  alcatel_sros_show_service_sap-using.ttp  alcatel_sros_show_service_sdp-using.json  alcatel_sros_show_service_sdp-using.ttp  alcatel_sros_show_service_sdp.json  alcatel_sros_show_service_sdp.ttp  alcatel_sros_show_system_cpu.json  alcatel_sros_show_system_cpu.ttp  allied_telesis_awplus_show_arp.json  allied_telesis_awplus_show_arp.ttp  allied_telesis_awplus_show_interface.json  allied_telesis_awplus_show_interface.ttp  allied_telesis_awplus_show_interface_switchport.json  allied_telesis_awplus_show_interface_switchport.ttp  allied_telesis_awplus_show_ip_route.json  allied_telesis_awplus_show_ip_route.ttp  allied_telesis_awplus_show_lldp_neighbors_detail.json  allied_telesis_awplus_show_lldp_neighbors_detail.ttp  allied_telesis_awplus_show_mac_address-table.json  (+1617 more)
