[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "tptpy"
version = "1.0.0"
description = "A Textual TUI for interactively testing TextFSM and TTP templates with live parsing, JSON/table results, and exportable Python snippets."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Scott Peterman"},
]
keywords = [
    "textfsm",
    "ttp",
    "network-automation",
    "parsing",
    "tui",
    "textual",
    "network-engineering",
    "cli",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "textual>=0.80.0",
    "textfsm>=1.1.3",
    "ttp>=0.9.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/scottpeterman/tparsingtester"
Repository = "https://github.com/scottpeterman/tparsingtester"
Issues = "https://github.com/scottpeterman/tparsingtester/issues"

[project.scripts]
tptpy = "tptpy.__main__:main"

[tool.setuptools.packages.find]
include = ["tptpy*"]

[tool.setuptools.package-data]
tptpy = ["py.typed"]